MAJOR CHANGES: Updating business requirments for delivery service by adding delivery areas to each shop and incorporating fee based on pre specified area by shop. integrating with cart and order creation flow, restructuring dtos